compiler/actonc/test/typeerrors/actor_self_reserved_method_param.act
actor Test():
    def test_method(first, self):
        pass